2003-06-25  Glynn Foster   <glynn.foster@sun.com>

	* stylesheets/l10n.txt: Update italian translation for 
	Next/Previous/Content descriptions.

2003-06-13  Mikael Hallendal  <micke@imendio.com>

        * *: Updated my contact information
	
2003-06-05  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: (window_about_cb): 
	- Reverted string change reported by Christian Rose. SORRY!

2003-06-04  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-scrollkeeper.c: (scrollkeeper_parse_toc_section):
	- fixed leak found by Kjartan.

	* src/yelp-reader.c: 
	- style fixes
	- fixes memory leaks found and patched by Narayana Pattipati
	- fixes #110572  
	
2003-06-03  Mikael Hallendal  <micke@codefactory.se>

        * src/yelp-window.c: (window_about_cb): 
	- If About window is already showing, don't create another one.
	  Patch by Steve Chaplin, fixes #113906

2003-06-03  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-content.c: (content_reader_finished_cb):
	- Use gtp_tree_view_expand_to_path to expand the tree instead of callin
	  gtk_tree_view_expand_path on all parents. Fixes #113977

2003-05-06  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.in: Added "ga" to ALL_LINGUAS

2003-05-05  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-24  Taneem Ahmed  <taneem@eyetap.org>

	* configure.in: Added "bn" to ALL_LINGUAS.

2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-03-10  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "eo" to ALL_LINGUAS.

2003-02-25  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: added "is" to ALL_LINGUAS

2003-02-21  Paisa Seeluangsawat  <paisa@colorado.edu>

	* configure.in (ALL_LINGUAS): Added "th".

2003-02-18  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-02-09  Christian Rose  <menthos@menthos.com>
