@@ -1,6 +1,11 @@
 2003-06-25  Glynn Foster   <glynn.foster@sun.com>
 
-	* stylesheets/l10n.txt: Update italian translation for 
+	* stylesheets/l10n.xml: Add more support for other 
+	languages.
+
+2003-06-25  Glynn Foster   <glynn.foster@sun.com>
+
+	* stylesheets/l10n.xml: Update italian translation for 
 	Next/Previous/Content descriptions.
 
 2003-06-13  Mikael Hallendal  <micke@imendio.com>
